@@ -17,6 +17,8 @@
 12. Use KIcon("dialog-close") as tab-close icon.
 13. Dont round frame of KPassivePopup - as used in rekonq's tab previews.
 14. Add option to align tab text in the centre.
+15. Dont fade tabbar base on KDevelop's tabbbar that is in the menubar - KDevelop
+    itself is doing fading.
 
 1.0.2
 -----
